@@ -1,5 +1,4 @@
 #! /usr/bin/perl -w
-use 5.008007;
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
